<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/robot_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/robot_name"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/robot_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/robot_name_textview"
            android:layout_toRightOf="@id/robot_name_textview"
            android:hint="@string/robot_name_hint"
            android:singleLine="true" />

        <TextView
            android:id="@+id/robot_masteruri_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/robot_name_textview"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/master_uri"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/master_uri_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/robot_name_edit_text"
            android:layout_alignStart="@+id/robot_name_edit_text"
            android:layout_below="@id/robot_name_textview"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/robot_masteruri_textview"
            android:layout_toRightOf="@id/robot_masteruri_textview"
            android:hint="@string/chooser_uri_hint"
            android:inputType="textUri"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/advanced_options_checkbox_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/master_uri_edit_view"
            android:text="@string/show_advanced_options" />

        <LinearLayout
            android:id="@+id/advanced_options_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/advanced_options_checkbox_view"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/joystick_topic_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/joystick_topic_prompt"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/joystick_topic_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/joy_pref_title"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/laserscan_topic_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/laserscan_topic_prompt"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/laser_scan_edit_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/laser_pref_title"
                    android:inputType="textUri"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/map_topic_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/map_topic_prompt"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/map_topic_edit_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/map_pref_title"
                    android:inputType="textUri"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/camera_topic_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/camera_topic_prompt"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/camera_topic_edit_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/camera_pref_title"
                    android:inputType="textUri"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gesture_topic_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/gesture_topic_prompt"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/gesture_topic_edit_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/gesture_pref_title"
                    android:inputType="textUri"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/odometry_topic_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/odometry_topic_prompt"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/odometry_topic_edit_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/odometry_pref_title"
                    android:inputType="textUri"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pose_topic_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/pose_topic_prompt"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pose_topic_edit_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/pose_pref_title"
                    android:inputType="textUri"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/distance_topic_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/distance_topic_prompt"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/distance_topic_edit_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/distance_pref_title"
                    android:inputType="textUri"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/goal_topic_prompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/goal_topic_prompt"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/goal_topic_edit_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/goal_pref_title"
                    android:inputType="textUri"
                    android:singleLine="true"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>